<resources>
    <string name="app_name">КС Клиника</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Имя пользователя</string>
    <string name="nav_header_logout">Выйти</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="internet_connection_error_alt">Нет интернет соединения</string>
    <string name="internet_connection_error">Нет соединения с сервером. Проверьте настройки интернет соединение</string>
    <string name="no_server_connection">Отсутствует соединение с сервером</string>
    <string name="check_internet_settings">Проверьте настройки интернет соединения</string>
    <string name="nav_visits">Ближайшие записи</string>
    <string name="nav_history_visits">История записей</string>
    <string name="nav_doctors">Врачи</string>
    <string name="nav_services">Услуги</string>
    <string name="nav_contacts">Контакты</string>
    <string name="no_authorized_message">Вы не авторизованы в системе</string>
    <string name="authorize_message">Войдите или зарегистрируйтесь</string>
    <string name="to_continue">чтобы продолжить</string>
    <string name="second_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="third_name">Отчество</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="save">Сохранить</string>
    <string name="edit_user_data">Настройки аккаунта</string>
    <string name="something_went_wrong">Ошибка выполнения запроса</string>
    <string name="successfully_user_update">Данные пользователя успешно сохранены</string>
    <string name="go_to_clinic">Приезжайте в нашу клинику!</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="doctorName">ФИО доктора</string>
    <string name="specialty">Специальность</string>
    <string name="user_data_was_successfully_saved">Данные пользователя были успешно сохранены</string>
    <string name="user_data_was_not_successfully_saved">Возникла ошибка при выполнении запроса. Повторите действие позже</string>
    <string name="nav_settings">Настройки</string>
    <string name="price">Цена</string>
    <string name="serviceName">Наименование услуги</string>
    <string name="create_visit">Записаться</string>
    <string name="empty_list">Список пуст</string>
    <string name="contacts_title">Контакты</string>
    <string name="doctors_title">Врачи</string>
    <string name="services_title">Услуги</string>
    <string name="visits_title">Ближайшие записи</string>
    <string name="settings_title">Настройки</string>
    <string name="details_activity_title">Детальная информация</string>
    <string name="record_activity_title">Запись на прием</string>
</resources>
