<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_visits"
        android:icon="@drawable/ic_visits_48dp"
        android:title="@string/nav_visits" />
    <item
        android:id="@+id/nav_history_visits"
        android:icon="@drawable/ic_visits_history_48dp"
        android:title="@string/nav_history_visits" />
    <item
        android:id="@+id/nav_doctors"
        android:icon="@drawable/ic_doctor_48dp"
        android:title="@string/nav_doctors" />
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_services_48dp"
        android:title="@string/nav_services" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_48dp"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/ic_contacts_48dp"
        android:title="@string/nav_contacts" />
</menu>
