<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_height="96dp"
        android:layout_width="96dp"
        android:layout_gravity="center"
        android:contentDescription="@string/internet_connection_error_alt"
        android:src="@drawable/ic_no_authorized_48dp"
        android:layout_marginBottom="@dimen/view_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/no_authorized_message"
        android:layout_marginBottom="@dimen/view_vertical_margin"/>

    <TextView
        android:id="@+id/goToLoginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="#00f"
        android:text="@string/authorize_message"
        android:layout_marginBottom="@dimen/view_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/to_continue"
        android:layout_marginBottom="@dimen/view_vertical_margin"/>

</LinearLayout>