<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_height="96dp"
        android:layout_width="96dp"
        android:layout_gravity="center"
        android:contentDescription="@string/internet_connection_error_alt"

        android:src="@drawable/ic_warning_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/no_server_connection"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/check_internet_settings"/>

</LinearLayout>